log/build_2025-03-25_11-10-42/lane_angle/stdout_stderr.log
running egg_info
writing ../../../../build/lane_angle/lane_angle.egg-info/PKG-INFO
writing dependency_links to ../../../../build/lane_angle/lane_angle.egg-info/dependency_links.txt
writing entry points to ../../../../build/lane_angle/lane_angle.egg-info/entry_points.txt
writing requirements to ../../../../build/lane_angle/lane_angle.egg-info/requires.txt
writing top-level names to ../../../../build/lane_angle/lane_angle.egg-info/top_level.txt
reading manifest file '../../../../build/lane_angle/lane_angle.egg-info/SOURCES.txt'
writing manifest file '../../../../build/lane_angle/lane_angle.egg-info/SOURCES.txt'
running build
running build_py
copying lane_angle/lane_angle.py -> /home/crofi/AutoModel_Rep/build/lane_angle/build/lib/lane_angle
running install
running install_lib
copying /home/crofi/AutoModel_Rep/build/lane_angle/build/lib/lane_angle/lane_angle.py -> /home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle
byte-compiling /home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle/lane_angle.py to lane_angle.cpython-310.pyc
  File "/home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle/lane_angle.py", line 47
    print(f"right lines: {len(right_lines}")            
                                           ^
SyntaxError: f-string: closing parenthesis '}' does not match opening parenthesis '('

running install_data
running install_egg_info
removing '/home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../../build/lane_angle/lane_angle.egg-info to /home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle-0.0.0-py3.10.egg-info
running install_scripts
Installing lane_angle script to /home/crofi/AutoModel_Rep/install/lane_angle/lib/lane_angle
writing list of installed files to '/home/crofi/AutoModel_Rep/build/lane_angle/install.log'
